--- a/FECC/DOM/A3/style.css
+++ b/FECC/DOM/A3/style.css
@@ -1,35 +1,23 @@
-
-body {
-font-family: Arial, sans-serif;
-margin: 0;
-padding: 0;
-background-color: #d5c3c3;
+body{
+    background-color: white;
+}
+#displayProducts{
+display: grid;
+grid-template-columns: repeat(4,1fr);
 }
 
-.products-container {
-display: flex;
-flex-wrap: wrap;
-justify-content: space-around;
-padding: 20px;
+.cardContainer{
+    border: 1px solid #ccc;
+    border-radius: 15px;
+    padding: 16px;
+    margin: 8px;
+    width: 300px; 
+    text-align: center;
 }
-
-.product-card {
-border: 1px solid #ccc;
-border-radius: 8px;
-margin: 10px;
-padding: 25px;
-width: 280px;
-height: auto;
-background-color: #ffffff;
+.picture {
+    width: 250px;
+    height: auto; 
 }
-
-.product-image {
-    display: block;
-    margin: auto;
-max-width: 90%;
-height: auto;
-}
-
-.filter-container {
-margin: 20px;
+h1{
+    text-align: center;
 }
