--- a/FECC/Project/Bewakoof Website/src/styles/Headerbar.css
+++ b/FECC/Project/Bewakoof Website/src/styles/Headerbar.css
@@ -13,7 +13,7 @@ ul{
   list-style: none;
 }
 #rightside{
-  border: 3px solid  green;
+  /* border: 3px solid  green; */
   margin-right: 10%;
   display: flex;
   justify-content: center;
@@ -30,4 +30,10 @@ background-color: #EAEAEA;
 height: 20px;
 margin-left: 40px;
 margin-right: 20px;
+}
+#loginfont{
+  font-family: "Montserrat", sans-serif; 
+  font-size: 12px;
+  font-weight: 600;
+  margin-right: 10px;
 }
